--- a/css/styles.css
+++ b/css/styles.css
@@ -50,10 +50,13 @@ body {
 }
 
 .article {
-	margin-bottom: 50px;
 	color: white;
 	background-color: rgb(0, 59, 123);
 	padding: 30px;
+}
+
+.article:not(:last-child) {
+	margin-bottom: 50px;
 }
 
 .article-header {
