--- a/css/styles.css
+++ b/css/styles.css
@@ -49,17 +49,19 @@ body {
 	padding: 50px;
 }
 
-.article {
+.article, .url-gen {
 	color: white;
 	background-color: rgb(0, 59, 123);
 	padding: 30px;
+	font-family: "Lato", "sans-serif";
+	font-size: 18px;
 }
 
 .article:not(:last-child) {
 	margin-bottom: 50px;
 }
 
-.article-header {
+.article-header, .gen-head {
 	font-family: "Oswald", "sans-serif";
 	font-size: 36px;
 }
@@ -85,6 +87,35 @@ body {
 .article-body {
 	font-family: "Lato", "sans-serif";
 	display: none;
+}
+
+.imguritem, .imguritem video {
+	width: 100%;
+}
+
+#imgur-gen-submit, #gfycat-gen-submit {
+	padding: 5px;
+	margin-left: 10px;
+	background-color: rgb(57, 138, 226);
+	cursor: pointer;
+}
+
+.gen-output textarea {
+	display: none;
+	margin-top: 20px;
+	width: 100%;
+}
+
+#imgur-gen-field {
+	width: 186px;
+}
+
+#imgur-gen {
+	margin-bottom: 50px;
+}
+
+#gfycat-gen-field {
+	width: 231px;
 }
 
 .footer {
