--- a/css/styles.css
+++ b/css/styles.css
@@ -118,6 +118,12 @@ body {
 	width: 231px;
 }
 
+.mockdraft-embed {
+	width: 502px;
+	height: 620px;
+	border: 0;
+}
+
 .footer {
 	width: 100%;
 	height: 128px;
